@@ -1,9 +1,9 @@
-set debug 3
+set debug 5
 set log_file "/var/log/l2tpns"
 set l2tp_secret "secret"
 set primary_dns 1.2.3.4
 set secondary_dns 1.2.3.5
-set save_state yes
+set save_state no
 set snoop_host 1.2.3.4
 set snoop_port 41001
 set primary_radius 1.2.3.6
@@ -16,6 +16,8 @@ set throttle_speed 64
 set accounting_dir "/var/run/l2tpns/acct/"
 set setuid 0
 set dump_speed no
+set mac_address 00:02:B3:AC:E1:01
+set cluster_hb_timeout 50
 load plugin "garden"
 load plugin "autothrottle"
 load plugin "autosnoop"
